--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -97,7 +97,7 @@
       {% endif %}
 
     {% endfor %}
-    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Flyw1217.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Flyw1217.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="hit"/></a>
   </div> <!-- .sidebar-bottom -->
   
 </div><!-- #sidebar -->
