--- a/_includes/head.html
+++ b/_includes/head.html
@@ -112,4 +112,7 @@
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
   {% endunless %}
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3287868801868405"
+     crossorigin="anonymous"></script>
 </head>
