--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -139,6 +139,18 @@ tail_includes:
   </div><!-- .post-tail-bottom -->
 
 </div><!-- div.post-tail-wrapper -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3287868801868405"
+     crossorigin="anonymous"></script>
+<!-- 수평형 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3287868801868405"
+     data-ad-slot="5984827999"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <!--
 <script src="https://utteranc.es/client.js"
         repo="lyw1217/lyw1217.github.io"
