google-site-verification 추가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -115,4 +115,5 @@
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3287868801868405"
      crossorigin="anonymous"></script>
+  <meta name="google-site-verification" content="xamgbcBx-cuNq0sM_BoDVExJkjMTV_yN0DAx7p_BLhc" />
 </head>
